ESN-1719 [New] Add support for work entry templates and minutes calculation
Introduced work entry templates to simplify resource creation and ensure consistent initialization. Enhanced the `PresenceService` to calculate and display work time in minutes for the current day. Updated associated services, tests, and constants to align with the new functionality while improving code maintainability.